tests/baselines/reference/parserSkippedTokens7.errors.txt
parserSkippedTokens7.ts(1,9): error TS1127: Invalid character.


==== parserSkippedTokens7.ts (1 errors) ====
    /*foo*/ \ /*bar*/
            
!!! error TS1127: Invalid character.